fix scrollbar

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ Version: 0.7.2
 
 :root {
     --main-color: #f79f00;
+    --secondary-color: #ce8600;
     --first-bg-color: #303030;
     --second-bg-color: #272727;
     --third-bg-color: #212121;
@@ -24,6 +25,10 @@ Version: 0.7.2
 
 ::-webkit-scrollbar-thumb {
     background-color: var(--main-color);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--secondary-color);
 }
 
 html {
